--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href = "style.css" rel = "stylesheet">
   <title>Document</title>
 </head>
 <body>
- <div id = "wrapper"></div>
- <div id = "cart"></div>
- <div id = "catalog"></div>
-
-  <script src = "lesson-5.js"></script>
+  <div id = "catalog"></div>
+  <script src = "lesson-6.js"></script>
 </body>
 </html>
