--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Document</title>
 </head>
 <body>
-  <script src = "lesson-7.js"></script>
+  <div id = "catalog"></div>
+  <script src = "lesson-8.js"></script>
 </body>
 </html>
