--- a/lesson10.html
+++ b/lesson10.html
@@ -8,6 +8,13 @@
 </head>
 <body>
   <button>Click</button>
+  <form>
+    <input type = "text" pattern="[A-Za-zА-Яа-яЁё]" required>
+    <input type = "tel" pattern="(\+79[0-9]{9})" required> 
+    <input type = "email" required>
+    <input type = "text" required>
+    <button type="submit">Отправить</button>
+  </form>
   <script src = "lesson-10.js"></script>
 </body>
 </html>
